Fixing less develop release_2 and release_1

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -110,6 +110,30 @@
 		}	
 	}
 
+	/* Newsletter page */
+	.page-node-129{
+		.panels-flexible-region.panels-flexible-region-new-center.panels-flexible-region-first.col-md-6{
+			.pane-osha-newsletter-osha-newsletter-subscribe-extra{
+				#subscribe-extra{
+					#edit-subscribe-details{
+						.form-item-email{
+							input{
+								border-top-left-radius: 0;
+								border-bottom-left-radius: 0;
+							}
+						}
+						#edit-submit{
+							top: 5px;
+							border-top-right-radius: 0;
+							border-bottom-right-radius: 0;
+							padding-right: 1em;
+						}
+					}
+				}
+			}	
+		}
+	}
+
 }
 
 @media (max-width: 348px) { 
