--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -69,6 +69,30 @@
 		}
 	}
 
+	/* Private Zone */
+	.profile-edit-links-container{
+		.pane-hwc-partner-hwc-partner-private-link-0, 
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		.pane-hwc-partner-hwc-partner-private-link-2,
+		.pane-hwc-partner-hwc-partner-private-link-3,
+		.pane-node-profile-update-link{
+			width: 30%;
+		}
+		.pane-hwc-partner-hwc-partner-private-link-0, 
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		{
+	    	margin-bottom: 2em;
+		}
+	}
+
+	.node-type-gpa{
+		.main-container{
+			h2{
+				margin-left: 0;
+			}
+		} 
+	}
+
 }
 
 
