--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -58,6 +58,26 @@
 	    clear: both;
 	}
 
+	/* Good Practice Awards - GPA */
+	.node-type-gpa{ 
+		.main-container{ 
+			.field-name-field-introductory-text{
+				width: 100%;
+			}
+			.field-name-body{
+				width: 100%;
+			}
+			.click-here-to-see{
+				a{
+					width: 100%;
+					height: auto;
+					max-width: 463px;
+					min-height: 165px;
+				}
+			}
+		}
+	}	
+
 }
 
 
@@ -882,4 +902,16 @@
 	.start-browsing .start-browsing-box {
 	    margin-right: 0;
 	}
+}
+
+
+@media (max-width: 669px) {
+	
+	/* Private Zone */
+	.profile-edit-links-container{
+		.panels-flexible-region-inside-first{
+			justify-content: center;
+		}
+	}
+
 }
