--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -860,3 +860,26 @@
 	}
 
 }
+
+@media (max-width: 990px) {
+	
+	/* Private Zone */
+	.profile-edit-links-container{
+		.panels-flexible-region-inside-first{
+			justify-content: flex-start;
+		}
+
+		.pane-hwc-partner-hwc-partner-private-link-0, 
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		.pane-hwc-partner-hwc-partner-private-link-2,
+		.pane-hwc-partner-hwc-partner-private-link-3,
+		.pane-node-profile-update-link{
+			width: 87%;
+			max-width: 320px;
+		}
+		.hwc-partner-private-link-block-description {
+		    margin-top: 0.8em;
+		}
+	}
+
+}
