--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5401,6 +5401,9 @@ body.newsletter .hwc-share-widget {
   bottom: -40px;
 }
 /* Good Practice Awards - GPA */
+.node-type-gpa .main-container h2 {
+  padding-bottom: 0.5em;
+}
 .node-type-gpa .main-container .hwc-share-widget {
   float: right;
 }
@@ -5454,48 +5457,19 @@ body.newsletter .hwc-share-widget {
   padding: 2em;
   height: 350px;
   margin-top: 2em;
-  margin-bottom: 2em;
 }
 .node-type-gpa .main-container .slider--video--section h2.block-title {
   color: #003399;
   padding-top: 0.3em;
   padding-bottom: 1em;
   padding-left: 0.4em;
-}
-.node-type-gpa .main-container .slider--video--section .multicarousel--block {
-  height: 200px;
-}
-.node-type-gpa .main-container .slider--video--section .item p {
-  border: 2px solid #DEE999;
-  padding: 1.5em;
-  margin: 0 1em;
-  font-weight: 700;
-  text-align: center;
-  font-size: 1.2em;
-  min-height: 150px;
-}
-.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
-  background: #EFEFF0;
-}
-.node-type-gpa .main-container ol.multicarousel-indicators li.active {
-  background: #ACC700;
-}
-.node-type-gpa .main-container ol.multicarousel-indicators li {
-  vertical-align: middle;
-  border: 2px solid #59595A;
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  margin: 0px 2px;
-  text-indent: -999px;
-  border-radius: 10px;
-  cursor: pointer;
-  background-color: #EFEFF0;
+  font-weight: 600;
 }
 .node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block {
   overflow: hidden;
   padding: 0 3.5rem;
   width: 100%;
+  height: 200px;
   margin: auto;
   position: relative;
 }
@@ -5514,34 +5488,28 @@ body.newsletter .hwc-share-widget {
   overflow: hidden;
   position: relative;
 }
-.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst.over {
-  pointer-events: none;
+.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #DEE999;
+  padding: 1.5em;
+  margin: 0 1em;
+  font-weight: 700;
+  text-align: center;
+  font-size: 1.1em;
+  min-height: 150px;
 }
+.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst.over,
 .node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
   pointer-events: none;
 }
-.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
-  background: #EFEFF0;
-  height: 100%;
-  cursor: pointer;
-}
-.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary:hover {
-  opacity: 0.9;
-}
-.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst.over img {
-  opacity: 0.4;
-}
+.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst.over img,
 .node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst.over img {
   opacity: 0.4;
 }
-.node-type-gpa .main-container ol.multicarousel-indicators {
-  position: absolute;
-  display: block !important;
-  z-index: 15;
-  width: 90%;
-  list-style: none;
-  text-align: center;
-  bottom: -11px;
+.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
+  pointer-events: none;
 }
 .node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst {
   position: absolute;
@@ -5553,11 +5521,44 @@ body.newsletter .hwc-share-widget {
   top: -19px;
   right: 0;
 }
-.node-type-gpa .main-container .btn:active,
-.node-type-gpa .main-container .btn.active {
+.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
+  background: #EFEFF0;
+  height: 100%;
+  cursor: pointer;
+}
+.node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary:hover {
+  opacity: 0.9;
+}
+.node-type-gpa .main-container .slider--video--section .btn:active,
+.node-type-gpa .main-container .slider--video--section .btn.active {
   box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.125);
 }
+.node-type-gpa .main-container ol.multicarousel-indicators {
+  position: absolute;
+  display: block !important;
+  z-index: 15;
+  width: 90%;
+  list-style: none;
+  text-align: center;
+  bottom: -11px;
+}
+.node-type-gpa .main-container ol.multicarousel-indicators li {
+  vertical-align: middle;
+  border: 2px solid #59595A;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin: 0px 2px;
+  text-indent: -999px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #EFEFF0;
+}
+.node-type-gpa .main-container ol.multicarousel-indicators li.active {
+  background: #ACC700;
+}
 .node-type-gpa .main-container .group-participate {
+  width: 100%;
   background: url(../images/gpa-how-to-participate-background.png) no-repeat;
   background-size: cover;
   padding: 2em;
@@ -5599,6 +5600,12 @@ body.newsletter .hwc-share-widget {
 .node-type-gpa .main-container .group-participate .field-collection-view,
 .node-type-gpa .main-container .group-participate .field-collection-container {
   border-bottom: 0;
+}
+.node-type-gpa .group-faq {
+  width: 100%;
+  clear: both;
+  margin-top: 3em;
+  float: left;
 }
 .node-type-gpa #faq {
   margin-top: 2em;
