--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6204,6 +6204,7 @@ body.newsletter{
 
 		h2{
 			padding-bottom: 0.5em;
+			font-weight: 500;
 		}
 
 		.hwc-share-widget{
@@ -6270,7 +6271,6 @@ body.newsletter{
 				padding-top: 0.3em;
     			padding-bottom: 1em;
     			padding-left: 0.4em;
-    			font-weight: 600;
 			}
 
 			.slider--video--block{
@@ -6339,7 +6339,9 @@ body.newsletter{
 							height: 100%;
 		    				cursor: pointer;
 		    				&:hover{
-						    	opacity: 0.9;
+						    	img{
+						    		opacity: 0.8;
+						    	}
 						    }
 						}
 					}
@@ -6384,8 +6386,9 @@ body.newsletter{
 			color:#FFF;
 			float: left;
 
-			h3{
-				padding: 0;
+			h2{
+				color: #FFF;
+				padding: 0 0 0.3em 0;
 			}
 
 			a{
