--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -75,6 +75,24 @@
 					min-height: 165px;
 				}
 			}
+			.group-participate{
+				.field-name-field-participate-description{
+					width: 100%;
+					padding-right: 0;
+				}
+				.field-collection-container{
+					width: 100%;
+					padding-left: 0;
+					.field-label{
+						padding-left: 0;
+						padding-top: 1em;
+					}
+					.field-collection-view{
+						padding-left: 0;
+						margin-left: 0;
+					}
+				}
+			}
 		}
 	}	
 
