--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6489,3 +6489,89 @@ body.newsletter{
     padding-right: 2em;
 }
 
+
+/* Home page */
+
+body.front-page{
+	#block-views-homepage-banners-block{
+		.view-homepage-banners{
+			.view-content{
+				display: flex;
+    			flex-wrap: wrap;
+			}
+
+			.views-row-even, .views-row-odd{
+		
+				padding-left: 0;
+		    	padding-right: 0;
+		   
+		    		text-align: center;
+		    		/* IE10+ */ 
+					background-image: -ms-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+
+					/* Mozilla Firefox */ 
+					background-image: -moz-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+
+					/* Opera */ 
+					background-image: -o-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+
+					/* Webkit (Safari/Chrome 10) */ 
+					background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(47, #F6F6F6), color-stop(100, #ededed));
+
+					/* Webkit (Chrome 11+) */ 
+					background-image: -webkit-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+
+					/* W3C Markup */ 
+					background-image: linear-gradient(to bottom, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+					.img-right-column{
+						height: 100%;
+    					display: flex;
+    					align-items: flex-end;
+    					img{
+		    				margin: 0 auto;
+		    			}
+					}
+		    		
+		    	}
+			}
+			.views-row-first, .views-row-last{
+				background: url(../images/background-splash-box1.png) #94c000 !important;
+				float: left;
+				text-align: center;
+				padding-bottom: 0;
+				h1{
+					padding-top: 1.5em;
+				    border-bottom: 0;
+				    font-size: 2em;
+				    font-style: normal;
+				    font-weight: 400;
+				    color:#FFF;
+				}
+
+				h2{
+					color:#FFF;
+					font-style: normal;
+					font-weight: 600;
+				}
+
+				p{
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: center;
+					color: #FFF;
+				    padding-top: 1em;
+				    padding-bottom: 2em;
+				    max-width: 430px;
+				    margin: 0 auto;
+				    font-size: 1.2em;
+				}
+
+				.btn-background-transparent{
+					display: flex;
+		    		justify-content: center;
+		    		align-items: center;
+				}
+			}
+		}
+	}
+}
