--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -215,25 +215,26 @@ select{
 
 .content-buttom{
 	margin-top: 1.5em;
-	.see-more-button-20{
-		background: url(../images/ico-plus-20.png) no-repeat 99% 2px #0030a0;
-	    text-transform: uppercase;
-	    color: #FFF;
-	    border-top-left-radius: 7px;
-	    border-bottom-left-radius: 7px;
-	    border-top-right-radius: 15px;
-	    border-bottom-right-radius: 15px;
-	    padding: 3px 3.5em 4px 0.7em;
-		-webkit-transition: all 0.3s;
-		-moz-transition: all 0.3s;
-		-o-transition: all 0.3s;
-		transition: all 0.3s;
-	    &:hover{
-	    	color: #FFF;
-	    	background: url(../images/ico-plus-20-hover.png) no-repeat 99% 2px #8fc900;
-	    	text-decoration: none;
-	    }
-	}
+}
+
+.see-more-button-20{
+	background: url(../images/ico-plus-20.png) no-repeat 99% 2px #0030a0;
+    text-transform: uppercase;
+    color: #FFF;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    padding: 3px 3.5em 4px 0.7em;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+    &:hover{
+    	color: #FFF;
+    	background: url(../images/ico-plus-20-hover.png) no-repeat 99% 2px #8fc900;
+    	text-decoration: none;
+    }
 }
 
 .back-to-events, .back-links{
@@ -245,6 +246,13 @@ select{
 
 .main-container{
 	h2{
+		color: #003399;
+		a:before{
+			content: '';
+			padding-right: 0;
+		}
+	}
+	h2.block-title{
 		color: #003399;
 		a:before{
 			content: '';
@@ -6493,85 +6501,188 @@ body.newsletter{
 /* Home page */
 
 body.front-page{
-	#block-views-homepage-banners-block{
-		.view-homepage-banners{
-			.view-content{
-				display: flex;
-    			flex-wrap: wrap;
-			}
+	.main-container{
+		/* Intro Boxes */
+		#block-views-homepage-banners-block{
+			.view-homepage-banners{
+				.view-content{
+					display: flex;
+	    			flex-wrap: wrap;
+				}
 
-			.views-row-even, .views-row-odd{
-		
-				padding-left: 0;
-		    	padding-right: 0;
-		   
-		    		text-align: center;
-		    		/* IE10+ */ 
-					background-image: -ms-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+				.views-row-even, .views-row-odd{
+			
+					padding-left: 0;
+			    	padding-right: 0;
+			   
+			    		text-align: center;
+			    		/* IE10+ */ 
+						background-image: -ms-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
 
-					/* Mozilla Firefox */ 
-					background-image: -moz-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+						/* Mozilla Firefox */ 
+						background-image: -moz-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
 
-					/* Opera */ 
-					background-image: -o-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+						/* Opera */ 
+						background-image: -o-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
 
-					/* Webkit (Safari/Chrome 10) */ 
-					background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(47, #F6F6F6), color-stop(100, #ededed));
+						/* Webkit (Safari/Chrome 10) */ 
+						background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(47, #F6F6F6), color-stop(100, #ededed));
 
-					/* Webkit (Chrome 11+) */ 
-					background-image: -webkit-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+						/* Webkit (Chrome 11+) */ 
+						background-image: -webkit-linear-gradient(top, #ededed 0%, #F6F6F6 47%, #ededed 100%);
 
-					/* W3C Markup */ 
-					background-image: linear-gradient(to bottom, #ededed 0%, #F6F6F6 47%, #ededed 100%);
-					.img-right-column{
-						height: 100%;
-    					display: flex;
-    					align-items: flex-end;
-    					img{
-		    				margin: 0 auto;
-		    			}
+						/* W3C Markup */ 
+						background-image: linear-gradient(to bottom, #ededed 0%, #F6F6F6 47%, #ededed 100%);
+						.img-right-column{
+							height: 100%;
+	    					display: flex;
+	    					align-items: flex-end;
+	    					img{
+			    				margin: 0 auto;
+			    			}
+						}
+			    		
+			    	}
+				}
+				.views-row-first, .views-row-last{
+					background: url(../images/background-splash-box1.png) #94c000 !important;
+					float: left;
+					text-align: center;
+					padding-bottom: 0;
+					h1{
+						padding-top: 1.5em;
+					    border-bottom: 0;
+					    font-size: 2em;
+					    font-style: normal;
+					    font-weight: 400;
+					    color:#FFF;
 					}
-		    		
-		    	}
-			}
-			.views-row-first, .views-row-last{
-				background: url(../images/background-splash-box1.png) #94c000 !important;
-				float: left;
-				text-align: center;
-				padding-bottom: 0;
-				h1{
-					padding-top: 1.5em;
-				    border-bottom: 0;
-				    font-size: 2em;
-				    font-style: normal;
-				    font-weight: 400;
-				    color:#FFF;
-				}
 
-				h2{
-					color:#FFF;
-					font-style: normal;
-					font-weight: 600;
-				}
+					h2{
+						color:#FFF;
+						font-style: normal;
+						font-weight: 600;
+					}
 
-				p{
-					display: flex;
-					flex-wrap: wrap;
-					justify-content: center;
-					color: #FFF;
-				    padding-top: 1em;
-				    padding-bottom: 2em;
-				    max-width: 430px;
-				    margin: 0 auto;
-				    font-size: 1.2em;
-				}
+					p{
+						display: flex;
+						flex-wrap: wrap;
+						justify-content: center;
+						color: #FFF;
+					    padding-top: 1em;
+					    padding-bottom: 2em;
+					    max-width: 430px;
+					    margin: 0 auto;
+					    font-size: 1.2em;
+					}
 
-				.btn-background-transparent{
-					display: flex;
-		    		justify-content: center;
-		    		align-items: center;
+					.btn-background-transparent{
+						display: flex;
+			    		justify-content: center;
+			    		align-items: center;
+					}
 				}
 			}
 		}
+
+		/*Newsletter Home page section*/
+		.newsletter-social-media{
+			background: url(../images/background-newsletter-home-page.png) no-repeat #94c000 !important;
+			#block-osha-newsletter-osha-newsletter-image{
+				background: transparent;
+				padding: 2em 2em 2em 2em;
+				max-width: 800px;
+				margin: 0 auto;
+				h2.block-title{
+					a{
+						background: url(../images/ico-newsletter.png) no-repeat 1px 5px;
+						color: #FFF;
+						padding-left: 1.3em;
+						display: block;
+						text-align: left;
+						font-weight: 500;
+					}
+				}
+			}
+		}
+
+		.box-before.social-media{
+			padding: 2em 2em 2em 2em;
+			h2{
+				color: white;
+			    margin-top: 0;
+			    margin-bottom: 1em;
+			    font-weight: 400;
+					&:before{
+				        content: ' ';
+					    width: 30px;
+					    display: block;
+					    height: 32px;
+					    float: left;
+					    background: url(../images/ico-social-media.png) 1px 5px no-repeat;
+				}
+			}
+
+			.on-the-web{
+				a{
+					float: left;
+					width: 60px;
+   					display: flex;
+   					justify-content: center;
+					&:before{
+						content:' ';
+						float: left;
+					}
+					img{
+						display: none;
+					}
+				}
+			}
+
+			.otw-twitter{
+				a:before{
+					background: url(../images/newsletter-ico-twetter.png) no-repeat;
+					width: 43px;
+    				height: 33px;
+				}
+			}
+			.otw-facebook{
+				a:before{
+					background: url(../images/newsletter-ico-facebook.png) no-repeat;
+					width: 36px;
+    				height: 33px;
+				}
+			}
+			.otw-linkedin{
+				a:before{
+					background: url(../images/newsletter-ico-linkedin.png) no-repeat;
+					width: 35px;
+    				height: 33px;
+				}
+			}
+			.otw-youtube{
+				a:before{
+					background: url(../images/newsletter-ico-youtube.png) no-repeat;
+					width: 49px;
+    				height: 33px;
+				}
+			}
+			.otw-flickr{
+				a:before{
+					background: url(../images/newsletter-ico-flicker.png) no-repeat;
+					width: 42px;
+    				height: 33px;
+				}
+			}
+			.otw-slideshare{
+				a:before{
+					background: url(../images/newsletter-ico-slideshare.png) no-repeat;
+					width: 32px;
+    				height: 33px;
+				}
+			}
+
+		}
+
 	}
 }
