HW20-157 - Publication list - Latest publications (tablet/Mobile)

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -1,5 +1,30 @@
+@media (min-width: 1200px) {
+
+	/*Slider Publications*/
+	body.page-tools-and-publications-publications{
+		.btn-primary, ol.multicarousel-indicators{
+			display: none;
+		}
+
+	}
+
+}
+
+
 @media (max-width: 1200px) {
 
+	/*Slider Publications*/
+	body.page-tools-and-publications-publications{
+		.slider--video--section{
+			.slider--video--block{
+				.slider--video--items{
+					.multicarousel--block{
+						height: 225px;
+					}
+				}
+			}
+		}
+	}
 
 	.start-browsing {
     	background: url(../images/background-start-browsing.png) repeat-y;
