--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5851,6 +5851,17 @@ body.european-week{
 
 /* Private Zone */
 .profile-edit-links-container{
+
+	#act-as-partner{
+		.modal-body{
+			padding: 0;
+		}
+		.form-select{
+			width: 240px !important;
+			margin-top: 1em;
+		}
+	}
+
 	.panels-flexible-region-inside-first{
 		justify-content: center;
 		display: flex;
@@ -5862,7 +5873,7 @@ body.european-week{
 	.pane-hwc-partner-hwc-partner-private-link-2,
 	.pane-hwc-partner-hwc-partner-private-link-3,
 	.pane-node-profile-update-link{
-	  width: 20%;
+	  width: 300px;
 		
 		.pane-content{
 		min-height: 130px;
@@ -5874,6 +5885,7 @@ body.european-week{
 		max-height: 100% !important;
 		display: flex;
 		height: 100%;
+		flex-wrap: wrap;
 
 			.hwc-partner-private-link-block-title{
 				text-align: right;
@@ -5887,8 +5899,8 @@ body.european-week{
 				justify-content: flex-start;
 				font-size: 15px;
 				font-weight: 600;
-				min-height: 78px;
-				max-height: 100%;
+				min-height: 130px;
+				max-height: 130px;
 				min-width: 100%;
 				position: relative;
 				&:hover{
@@ -6811,8 +6823,4 @@ body.page-tools-and-publications-publications{
 			background: #ACC700;
 			}
 	}
-
 }
-
-
-
