HW20-157 - Publication list - Latest publications (tablet/Mobile)

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -2,6 +2,16 @@
 
 	/*Slider Publications*/
 	body.page-tools-and-publications-publications{
+		.slider--video--section{
+			height: 330px;
+			.slider--video--block{
+				.slider--video--items{
+					.multicarousel--block{
+						padding: 0;
+					}
+				}
+			}
+		}
 		.btn-primary, ol.multicarousel-indicators{
 			display: none;
 		}
