--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5817,21 +5817,22 @@ body.front-page .main-container .box-before.social-media .otw-slideshare a:befor
 /* Publications Slider  */
 body.page-tools-and-publications-publications .slider--video--section {
   clear: both;
-  padding: 2em;
-  height: 350px;
-  margin-top: 2em;
+  padding: 0;
+  height: 275px;
+  margin-top: 1em;
 }
 body.page-tools-and-publications-publications .slider--video--section h2.block-title {
   color: #003399;
   padding-top: 0.3em;
-  padding-bottom: 1em;
-  padding-left: 0.4em;
+  padding-bottom: 0;
+  padding-left: 25px;
+  margin-bottom: 0;
 }
 body.page-tools-and-publications-publications .slider--video--section .slider--video--block .slider--video--items .multicarousel--block {
   overflow: hidden;
   padding: 0 3.5rem;
   width: 100%;
-  height: 300px;
+  height: 275px;
   margin: auto;
   position: relative;
 }
@@ -5925,6 +5926,12 @@ body.page-tools-and-publications-publications ol.multicarousel-indicators li.act
 }
 @media (min-width: 1200px) {
   /*Slider Publications*/
+  body.page-tools-and-publications-publications .slider--video--section {
+    height: 330px;
+  }
+  body.page-tools-and-publications-publications .slider--video--section .slider--video--block .slider--video--items .multicarousel--block {
+    padding: 0;
+  }
   body.page-tools-and-publications-publications .btn-primary,
   body.page-tools-and-publications-publications ol.multicarousel-indicators {
     display: none;
