--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6703,15 +6703,16 @@ body.page-tools-and-publications-publications{
 
 	.slider--video--section{
 		clear: both;
-		padding: 2em;
-		height: 350px;
-		margin-top: 2em;
+		padding: 0;
+		height: 275px;
+		margin-top: 1em;
 
 		h2.block-title{
 			color: #003399;
 			padding-top: 0.3em;
-			padding-bottom: 1em;
-			padding-left: 0.4em;
+			padding-bottom: 0;
+			padding-left: 25px;
+			margin-bottom: 0;
 		}
 
 		.slider--video--block{
@@ -6720,7 +6721,7 @@ body.page-tools-and-publications-publications{
 					overflow: hidden;
 					padding: 0 3.5rem;
 					width: 100%;
-					height: 300px;
+					height: 275px;
 					margin: auto;
 					position: relative;
 
