HWC20 Development of the complete HWC20 Home page

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5665,6 +5665,7 @@ body.front-page .main-container {
 }
 body.front-page .main-container #block-views-homepage-banners-block {
   padding-bottom: 2em;
+  clear: both;
 }
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .view-content {
   display: flex;
