--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6513,6 +6513,7 @@ body.front-page{
 		/* Intro Boxes */
 		#block-views-homepage-banners-block{
 			padding-bottom: 2em;
+			clear: both;
 			.view-homepage-banners{
 				.view-content{
 					display: flex;
