--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6611,8 +6611,32 @@ body.front-page{
 
 		/* Recommended tools and resources */
 		.view-recommended-tools-and-resources{
-			img{
-				border: 0;
+			.views-row{
+				float: left;
+				width: 232px;
+				margin-top: 0.5em;
+				border: 2px solid #bcd75b;
+				height: 86px;
+				margin-bottom: 2em;
+				border-radius: 12px;
+				margin-right: 2em;
+				.field-content{
+					img{
+						border: 0;
+						float: left;
+					}
+				
+					span{
+						float: right;
+					    font-size: 2.1rem;
+					    display: block;
+					    width: 130px;
+					    text-align: right;
+					    font-weight: 600;
+					    line-height: 24px;
+    					padding-top: 3px;
+					}
+				}
 			}
 		}
 
@@ -6722,6 +6746,8 @@ body.front-page{
 			}
 
 		}
+
+
 
 	}
 }
